<resources>
    <string name="app_name">Adóptame</string>
    <string name="email_editText_hint">Correo electrónico</string>
    <string name="password_editText_hint">Contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="login_textView_register">¿Aún no tienes cuenta? !Regístrate!</string>
    <string name="email_error_toast">El email no es válido</string>
    <string name="action_settings">Ajustes</string>
    <string name="repeat_password_editText_hint">Repita la contraseña</string>
    <string name="email_editText_register_hint">Correo electrónico</string>
    <string name="register_button_text">Registrarse</string>
    <string name="register_textView_login">¿Ya estás registrado? ¡Inicia sesión!</string>
    <string name="register_class_name">Registro</string>
    <string name="login_class_name">Inicio sesión</string>
    <string name="login_email_error">Error: este correo electrónico no está registrado en la aplicación</string>
    <string name="login_password_error">Error: la contraseña es incorrecta</string>
    <string name="register_error">Error: El usuario ya existe</string>
    <string name="register_success">Ha sido registrado correctamente</string>
    <string name="different_password_error_toast">Error: Las contraseñas no coinciden</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_pet_detail">Detalles</string>
    <string name="activity_pet_detail_name">Nombre:</string>
    <string name="activity_pet_detail_sex">Sexo:</string>
    <string name="activity_pet_detail_size">Tamaño:</string>
    <string name="activity_pet_detail_age">Edad:</string>
    <string name="activity_pet_detail_weight">Peso:</string>
    <string name="activity_pet_detail_species">Especie:</string>
    <string name="activity_pet_detail_breed">Raza:</string>
    <string name="activity_pet_detail_description">Descripción:</string>
    <string name="action_search">Búsqueda</string>
    <string name="forgotten_password_textView">¿Has olvidado la contraseña?</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="change_password_error">La contraseña no ha podido ser cambiada</string>
    <string name="change_password_success">La contraseña fue cambiada con éxito</string>
    <string name="reset_password_error">El correo introducido no está registrado en la aplicación</string>
    <string name="reset_password_success">La contraseña fue reseteada con éxito. En breves ecibirá un correo con la nueva contraseña</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="action_share">Compartir</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_add_pet">AddPet</string>
    <string name="connection_error">Error en la conexión.\nCompruebe que está conectado a Internet</string>
    <string name="send_email_error">Error, no se ha podido resetear la contraseña. Inténtelo más tarde</string>
    <string name="separator">></string>
    <string name="title_activity_pet_form">PetForm</string>
    <string name="title_activity_edit_pet">EditPet</string>
</resources>
