<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/login_activity_vertical_margin"
    android:paddingLeft="@dimen/login_activity_horizontal_margin"
    android:paddingRight="@dimen/login_activity_horizontal_margin"
    android:paddingTop="@dimen/login_activity_vertical_margin"
    tools:context=".Register">

    <EditText
        android:id="@+id/repeat_password_editText_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password_editText_hint"
        android:password="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/password_editText_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_editText_hint"
        android:password="true"
        android:layout_above = "@id/repeat_password_editText_register"/>

    <EditText
        android:id="@+id/email_editText_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_editText_register_hint"
        android:inputType="textVisiblePassword"
        android:layout_above="@id/password_editText_register"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:textAllCaps="true"
        android:layout_below="@id/repeat_password_editText_register" />

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cyan"
        android:textSize="16sp"
        android:text="@string/register_textView_login"
        />

</RelativeLayout>